--- a/.github/workflows/chocolatine.yml
+++ b/.github/workflows/chocolatine.yml
@@ -1,7 +1,11 @@
 name: Chocolatine
-on: [push,pull_request]
-branches-ignore:
-  - "ga-ignore-*"
+on:
+  push:
+    branches-ignore:
+      - "ga-ignore-*"
+  pull_request:
+    branches-ignore:
+      - "ga-ignore-*"
 
 env:
   MIRROR_URL: git@github.com:EpitechPGEPromo2029/B-PSU-200-COT-2-1-minishell2-miranice.adjovi.git
