--- a/.github/workflows/chocolatine.yml
+++ b/.github/workflows/chocolatine.yml
@@ -18,7 +18,7 @@ jobs:
     steps:
       - name: Check if in mirror repo
         run: |
-          if [[ "$GITHUB_REPOSITORY" == *"B-PSU-200-COT-2-1-minishell2-miranice.adjovi.git"* ]]; then
+          if [[ "$GITHUB_REPOSITORY" == *"B-PSU-200-COT-2-1-minishell2-miranice.adjovi"* ]]; then
             echo "This is the mirror repository, skipping jobs."
             exit 1
           fi
